--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,25 @@
-/*
-vars
-*/
-/*
-mixin
-*/
+.main-container {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+  background-color: #2c3e50;
+  display: box;
+}
+
+.hero-wrapper {
+  text-align: center;
+  width: 100%;
+  margin: 12em auto;
+}
+
+.hero-text {
+  color: #ecf0f1;
+  font-size: 12em;
+  font-family: 'Tajawal', sans-serif;
+}
 /*# sourceMappingURL=style.css.map */
