--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,9 +1,28 @@
-/*
-vars
-*/
-
 @import 'partials/vars';
 @import 'partials/mediaqueries';
-/*
-mixin
-*/
+$backgroundColor: #2c3e50;
+$yanivKnollTextColor: #ecf0f1;
+.main-container {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: $backgroundColor;
+    display: box;
+}
+
+.hero-wrapper {
+    text-align: center;
+    width: 100%;
+    margin: 12em auto;
+}
+
+.hero-text {
+    color: $yanivKnollTextColor;
+    font-size: 12em;
+    font-family: 'Tajawal', sans-serif;
+}
