--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,13 +6,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The YK</title>
+    <link href="https://fonts.googleapis.com/css?family=Tajawal" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-
-
 <body>
-
+    <div class="main-container">
+        <div class="hero-wrapper">
+            <p class="hero-text">Yaniv Knoll</h6>
+        </div>
+    </div>
 </body>
 
 </html>
